--- a/nested-cloudformation-example-nginx/ec2-stack.yml
+++ b/nested-cloudformation-example-nginx/ec2-stack.yml
@@ -68,135 +68,131 @@ Resources:
           Arn: !Ref InstanceProfileArn
         UserData:
           Fn::Base64: !Sub |
-            #cloud-config
+            #!/bin/bash
+            set -e
 
-            packages:
-              - awslogs
+            # Install CloudWatch Agent
+            dnf install -y amazon-cloudwatch-agent
 
-            write_files:
-              - content: |
-                  #
-                  # ------------------------------------------
-                  # CLOUDWATCH LOGS AGENT CONFIGURATION FILE
-                  # ------------------------------------------
-                  [general]
-                  state_file = /var/awslogs/state/agent-state
-                  use_gzip_http_content_encoding = true
-
-                  [/var/log/messages]
-                  datetime_format = %b %d %H:%M:%S
-                  file = /var/log/messages
-                  buffer_duration = 5000
-                  log_stream_name = {instance_id}
-                  initial_position = start_of_file
-                  log_group_name = /var/log/messages
-
-                  [/var/log/secure]
-                  datetime_format = %b %d %H:%M:%S
-                  file = /var/log/secure
-                  buffer_duration = 5000
-                  log_stream_name = {instance_id}
-                  initial_position = start_of_file
-                  log_group_name = /var/log/secure
-
-                  [/var/log/nginx/access.log]
-                  datetime_format = %d/%b/%Y:%H:%M:%S %z
-                  file = /var/log/nginx/access.log
-                  buffer_duration = 5000
-                  log_stream_name = access.log
-                  initial_position = end_of_file
-                  log_group_name = /ec2/nginx/logs
-
-                  [/var/log/nginx/error.log]
-                  datetime_format = %Y/%m/%d %H:%M:%S
-                  file = /var/log/nginx/error.log
-                  buffer_duration = 5000
-                  log_stream_name = error.log
-                  initial_position = end_of_file
-                  log_group_name = /ec2/nginx/logs
-
-                path: /etc/awslogs/awslogs.conf
-
-              - content: |
-                  [plugins]
-                  cwlogs = cwlogs
-
-                  [default]
-                  region = ${AWS::Region}
-                path: /etc/awslogs/awscli.conf
-
-              - content: |
-                  echo export BLUEJAYS_ANALYTICS=${AnalyticsBucket}
-                path: /etc/profile.d/analytics-info
-
-              - content: |
-                  user nginx;
-                  worker_processes auto;
-                  error_log /var/log/nginx/error.log;
-                  pid /var/run/nginx.pid;
-                  include /usr/share/nginx/modules/*.conf;
-                  events {
-                  worker_connections 1024;
-                  }
-                  http {
-                  log_format json_combined escape=json
-                  '{'
-                    '"time_local":"$time_local",'
-                    '"remote_addr":"$remote_addr",'
-                    '"remote_user":"$remote_user",'
-                    '"request":"$request",'
-                    '"status": "$status",'
-                    '"body_bytes_sent":"$body_bytes_sent",'
-                    '"request_time":"$request_time",'
-                    '"http_referrer":"$http_referer",'
-                    '"http_user_agent":"$http_user_agent"'
-                  '}';
-                  access_log  /var/log/nginx/access.log json_combined;
-                  sendfile            on;
-                  tcp_nopush          on;
-                  tcp_nodelay         on;
-                  keepalive_timeout   65;
-                  types_hash_max_size 4096;
-                  include             /etc/nginx/mime.types;
-                  default_type        application/octet-stream;
-                  include /etc/nginx/conf.d/*.conf;
-                  index   index.html index.htm;
-
-                  map $http_user_agent $ignore_ua {
-                      "ELB-HealthChecker/2.0" 1;
-                  }
-
-                  server {
-                      listen       80;
-                      listen       [::]:80;
-                      server_name  _;
-                      root         /usr/share/nginx/html;
-                      include /etc/nginx/default.d/*.conf;
-                      location / {
-                          if ($ignore_ua) {
-                              access_log off;
-                              return 200;
-                          }
+            # Configure CloudWatch Agent
+            cat > /opt/aws/amazon-cloudwatch-agent/etc/amazon-cloudwatch-agent.json <<'EOF'
+            {
+              "logs": {
+                "logs_collected": {
+                  "files": {
+                    "collect_list": [
+                      {
+                        "file_path": "/var/log/messages",
+                        "log_group_name": "/var/log/messages",
+                        "log_stream_name": "{instance_id}",
+                        "timezone": "Local"
+                      },
+                      {
+                        "file_path": "/var/log/secure",
+                        "log_group_name": "/var/log/secure",
+                        "log_stream_name": "{instance_id}",
+                        "timezone": "Local"
+                      },
+                      {
+                        "file_path": "/var/log/nginx/access.log",
+                        "log_group_name": "/ec2/nginx/logs",
+                        "log_stream_name": "access.log",
+                        "timezone": "Local"
+                      },
+                      {
+                        "file_path": "/var/log/nginx/error.log",
+                        "log_group_name": "/ec2/nginx/logs",
+                        "log_stream_name": "error.log",
+                        "timezone": "Local"
                       }
-                      error_page 404 /404.html;
-                          location = /40x.html {
-                      }
-                      error_page 500 502 503 504 /50x.html;
-                          location = /50x.html {
-                      }
+                    ]
                   }
-                  }
-                path: /etc/nginx/nginx.conf
-            runcmd:
-                - mkdir -p /var/awslogs/state
-                - pip install --upgrade awscli
-                - touch /etc/profile.d/blue-jays.sh
-                - chmod +x /etc/profile.d/blue-jays.sh
-                - sudo yum install -y https://s3.us-west-2.amazonaws.com/amazon-ssm-us-west-2/latest/linux_amd64/amazon-ssm-agent.rpm
-                - sudo start amazon-ssm-agent
-                - sudo /etc/init.d/awslogs start
-                - sudo chkconfig awslogs on
-                - sudo service nginx restart
+                }
+              }
+            }
+            EOF
+
+            # Create nginx config
+            cat > /etc/nginx/nginx.conf <<'EOF'
+            user nginx;
+            worker_processes auto;
+            error_log /var/log/nginx/error.log;
+            pid /var/run/nginx.pid;
+            include /usr/share/nginx/modules/*.conf;
+            events {
+            worker_connections 1024;
+            }
+            http {
+            log_format json_combined escape=json
+            '{'
+              '"time_local":"$time_local",'
+              '"remote_addr":"$remote_addr",'
+              '"remote_user":"$remote_user",'
+              '"request":"$request",'
+              '"status": "$status",'
+              '"body_bytes_sent":"$body_bytes_sent",'
+              '"request_time":"$request_time",'
+              '"http_referrer":"$http_referer",'
+              '"http_user_agent":"$http_user_agent"'
+            '}';
+            access_log  /var/log/nginx/access.log json_combined;
+            sendfile            on;
+            tcp_nopush          on;
+            tcp_nodelay         on;
+            keepalive_timeout   65;
+            types_hash_max_size 4096;
+            include             /etc/nginx/mime.types;
+            default_type        application/octet-stream;
+            include /etc/nginx/conf.d/*.conf;
+            index   index.html index.htm;
+
+            map $http_user_agent $ignore_ua {
+                "ELB-HealthChecker/2.0" 1;
+            }
+
+            server {
+                listen       80;
+                listen       [::]:80;
+                server_name  _;
+                root         /usr/share/nginx/html;
+                include /etc/nginx/default.d/*.conf;
+                location / {
+                    if ($ignore_ua) {
+                        access_log off;
+                        return 200;
+                    }
+                }
+                error_page 404 /404.html;
+                    location = /40x.html {
+                }
+                error_page 500 502 503 504 /50x.html;
+                    location = /50x.html {
+                }
+            }
+            }
+            EOF
+
+            # Create analytics environment variable
+            echo "export BLUEJAYS_ANALYTICS=${AnalyticsBucket}" > /etc/profile.d/analytics-info.sh
+
+            # Create blue-jays profile script
+            touch /etc/profile.d/blue-jays.sh
+            chmod +x /etc/profile.d/blue-jays.sh
+
+            # Install and start SSM agent
+            dnf install -y https://s3.${AWS::Region}.amazonaws.com/amazon-ssm-${AWS::Region}/latest/linux_amd64/amazon-ssm-agent.rpm
+            systemctl enable amazon-ssm-agent
+            systemctl start amazon-ssm-agent
+
+            # Start CloudWatch Agent
+            /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl \
+              -a fetch-config \
+              -m ec2 \
+              -s \
+              -c file:/opt/aws/amazon-cloudwatch-agent/etc/amazon-cloudwatch-agent.json
+
+            # Restart nginx
+            systemctl restart nginx
         SecurityGroupIds:
           - Ref: InstanceSecGroup
         InstanceType: !Ref InstanceSize
