--- a/nested-cloudformation-example/ec2-stack.yml
+++ b/nested-cloudformation-example/ec2-stack.yml
@@ -79,15 +79,9 @@ Resources:
             {
               "logs": {
                 "logs_collected": {
-                  "files": {
-                    "collect_list": [
-                      {
-                        "file_path": "/var/log/messages",
-                        "log_group_name": "/var/log/messages",
-                        "log_stream_name": "{instance_id}",
-                        "timezone": "Local"
-                      }
-                    ]
+                  "journal": {
+                    "log_group_name": "/aws/ec2/systemd/journal",
+                    "log_stream_name": "{instance_id}"
                   }
                 }
               }
