--- a/nested-cloudformation-example-nginx/ec2-stack.yml
+++ b/nested-cloudformation-example-nginx/ec2-stack.yml
@@ -71,37 +71,63 @@ Resources:
             #!/bin/bash
             set -e
 
-            # Install CloudWatch Agent
-            dnf install -y amazon-cloudwatch-agent
+            # Get instance metadata
+            INSTANCE_ID=$(ec2-metadata --instance-id | cut -d " " -f 2)
+            REGION=$(ec2-metadata --availability-zone | cut -d " " -f 2 | sed 's/[a-z]$//')
 
-            # Configure CloudWatch Agent
-            cat > /opt/aws/amazon-cloudwatch-agent/etc/amazon-cloudwatch-agent.json <<'EOF'
-            {
-              "logs": {
-                "logs_collected": {
-                  "journal": {
-                    "log_group_name": "/aws/ec2/systemd/journal",
-                    "log_stream_name": "{instance_id}"
-                  },
-                  "files": {
-                    "collect_list": [
-                      {
-                        "file_path": "/var/log/nginx/access.log",
-                        "log_group_name": "/ec2/nginx/logs",
-                        "log_stream_name": "access.log",
-                        "timezone": "Local"
-                      },
-                      {
-                        "file_path": "/var/log/nginx/error.log",
-                        "log_group_name": "/ec2/nginx/logs",
-                        "log_stream_name": "error.log",
-                        "timezone": "Local"
-                      }
-                    ]
-                  }
-                }
-              }
-            }
+            # Install Vector
+            bash -c "$(curl -L https://setup.vector.dev)"
+            dnf install -y vector
+
+            # Configure Vector
+            cat > /etc/vector/vector.yaml <<EOF
+            sources:
+              journald:
+                type: journald
+                current_boot_only: true
+
+              nginx_access_logs:
+                type: file
+                include:
+                  - /var/log/nginx/access.log
+                read_from: beginning
+
+              nginx_error_logs:
+                type: file
+                include:
+                  - /var/log/nginx/error.log
+                read_from: beginning
+
+            sinks:
+              cloudwatch_journald:
+                type: aws_cloudwatch_logs
+                inputs:
+                  - journald
+                region: ${REGION}
+                group_name: /aws/ec2/systemd/journal
+                stream_name: ${INSTANCE_ID}
+                encoding:
+                  codec: json
+
+              cloudwatch_nginx_access:
+                type: aws_cloudwatch_logs
+                inputs:
+                  - nginx_access_logs
+                region: ${REGION}
+                group_name: /ec2/nginx/logs
+                stream_name: access.log
+                encoding:
+                  codec: json
+
+              cloudwatch_nginx_error:
+                type: aws_cloudwatch_logs
+                inputs:
+                  - nginx_error_logs
+                region: ${REGION}
+                group_name: /ec2/nginx/logs
+                stream_name: error.log
+                encoding:
+                  codec: json
             EOF
 
             # Create nginx config
@@ -176,12 +202,9 @@ Resources:
             systemctl enable amazon-ssm-agent
             systemctl start amazon-ssm-agent
 
-            # Start CloudWatch Agent
-            /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl \
-              -a fetch-config \
-              -m ec2 \
-              -s \
-              -c file:/opt/aws/amazon-cloudwatch-agent/etc/amazon-cloudwatch-agent.json
+            # Start and enable Vector
+            systemctl enable vector
+            systemctl start vector
 
             # Restart nginx
             systemctl restart nginx
