--- a/nested-cloudformation-example-nginx/ec2-stack.yml
+++ b/nested-cloudformation-example-nginx/ec2-stack.yml
@@ -103,9 +103,9 @@ Resources:
                 type: aws_cloudwatch_logs
                 inputs:
                   - journald
-                region: ${REGION}
+                region: $${REGION}
                 group_name: /aws/ec2/systemd/journal
-                stream_name: ${INSTANCE_ID}
+                stream_name: $${INSTANCE_ID}
                 encoding:
                   codec: json
 
@@ -113,7 +113,7 @@ Resources:
                 type: aws_cloudwatch_logs
                 inputs:
                   - nginx_access_logs
-                region: ${REGION}
+                region: $${REGION}
                 group_name: /ec2/nginx/logs
                 stream_name: access.log
                 encoding:
@@ -123,7 +123,7 @@ Resources:
                 type: aws_cloudwatch_logs
                 inputs:
                   - nginx_error_logs
-                region: ${REGION}
+                region: $${REGION}
                 group_name: /ec2/nginx/logs
                 stream_name: error.log
                 encoding:
